--- a/src/app/app.html
+++ b/src/app/app.html
@@ -45,7 +45,7 @@
       </div>
       <div class="flex items-center justify-between bg-gray-50 px-4 rounded-lg border-2 border-dashed border-gray-500">
         <div class="flex-1 min-w-0">
-          <div class="font-mono text-gray-900 truncate">
+          <div class="font-mono text-gray-900 truncate text-sm md:text-base">
             @if (emailGenerating) {
             Generating email...
             } @else {
