--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,4 @@
-<div class="min-h-screen bg-gray-100 font-sans">
+<div class="min-h-screen  font-sans">
 
   <!-- Header with Online Status -->
   <header class="bg-white shadow-sm">
@@ -34,8 +34,10 @@
         registration required.</p>
     </div>
 
-    <!-- Email Address Section -->
-    <div class="bg-white p-5 relative">
+
+    <div class="border-2 rounded-lg border-gray-400">
+          <!-- Email Address Section -->
+    <div class="bg-white p-5 relative rounded-lg">
       <div class="flex justify-between mb-2">
         <h2 class="text-lg font-semibold text-gray-900">Your Temporary Email</h2>
         <button (click)="openHistoryDialog()"
@@ -140,6 +142,7 @@
           </div>
         </div>
       </div>
+    </div>
     </div>
 
     <!-- How It Works Section -->
