--- a/src/app/compoents/new-email-modal/new-email-modal.html
+++ b/src/app/compoents/new-email-modal/new-email-modal.html
@@ -57,7 +57,7 @@
           </span>
         </div>
         
-        <p class="mt-2 text-xs text-gray-500">
+        <p class="mt-2 text-xs text-gray-500 flex">
           <lucide-icon name="check-circle" [size]="14" class="text-green-600 mr-1" *ngIf="usernameControl.valid"></lucide-icon>
           Use 4-24 characters with letters and numbers only
         </p>
