--- a/src/app/compoents/email-view-dialog/email-view-dialog.html
+++ b/src/app/compoents/email-view-dialog/email-view-dialog.html
@@ -7,7 +7,12 @@
         <lucide-icon name="chevron-left" [size]="24"></lucide-icon>
       </button>
       <h2 class="text-base sm:text-lg font-medium text-gray-800 ">
-        {{email.subject || '(No subject)'}}
+        <ng-container *ngIf="email.subject; else noSubject">
+          {{email.subject}}
+        </ng-container>
+        <ng-template #noSubject>
+          <span i18n="@@noSubject">(No subject)</span>
+        </ng-template>
       </h2>
     </div>
     <button (click)="dialogRef.close()" 
@@ -53,8 +58,7 @@
   <div class="px-4 py-3 sm:px-6 sm:py-4 border-t border-gray-300 bg-gray-50">
     <div class="flex justify-between items-center">
       <div class="text-xs text-gray-500 flex items-center">
-        <lucide-icon name="info" [size]="14" class="mr-1"></lucide-icon>
-        Temporary email
+        <lucide-icon name="info" [size]="14" class="mr-1"></lucide-icon><span i18n="@@temporaryEmail">Temporary email</span>
       </div>
     </div>
   </div>
