--- a/src/app/compoents/main/main.html
+++ b/src/app/compoents/main/main.html
@@ -12,7 +12,7 @@
                     </div>
                     <div>
                         <div class="flex items-center">
-                            <span class="text-xs text-green-700" i18n>Online</span>
+                            <span class="text-xs text-green-700" i18n>Online2</span>
                             <span class="ml-1 w-2 h-2 bg-green-700 rounded-full animate-pulse"></span>
                         </div>
                     </div>
