--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,9 @@
-<router-outlet/>
+<div class="min-h-screen font-sans">
+    <app-header (refreshClick)="onHeaderRefresh()"></app-header>
+    
+    <main class="flex-1">
+        <router-outlet/>
+    </main>
+    
+    <app-footer></app-footer>
+</div>
